--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.7.2
 black==23.7.0
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.6
+cryptography==41.0.2
 Django==4.2.3
 djangorestframework==3.14.0
 idna==3.4
@@ -10,8 +12,11 @@ lxml==4.9.3
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
+pdfminer.six==20221105
 Pillow==10.0.0
 platformdirs==3.9.1
+pycparser==2.21
+PyMuPDF==1.22.5
 PyPDF2==3.0.1
 python-pptx==0.6.21
 pytz==2023.3
